--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
     <section >
         <div class="vid position-relative" style="background-image: url(images/bg_4.jpg); height: 100vh; background-size: cover; background-position: center;">
             <div class="container-fluid">
-                <div class="info position-absolute top-50 start-50 translate-middle text-center" style="min-width: 400px;">
-                    <h2 class="text-white fw-bold" style="font-size: 50px;">Modern House Video</h2>
-                    <p class="text-secondary" style="max-width: 500px;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <div class="info position-absolute top-50 start-50 translate-middle text-center" >
+                    <h2 class="text-white fw-bold" style="font-size: 50px; min-width: 350px; ">Modern House Video</h2>
+                    <p class="text-secondary" style="max-width: 400px; margin: auto;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     <i class="fas fa-play p-3 text-white rounded-circle play-btn mt-3" style="font-size: 35px; background-color: var(--primary); cursor: pointer;"></i>
                 </div>
             </div>
@@ -350,8 +350,8 @@
             <div class="container">
                 <div class="row justify-content-center  align-items-center" style="padding: 120px 0;">
                     <div class="col-12 col-md-6  text-white text-md-start text-center">
-                        <h2 class="fs-1 w-75 m-md-0 m-auto  py-3">Find Best Place For Living</h2>
-                        <p class="">Find Best Place For Leaving</p>
+                        <h2 class="fs-1 w-75 m-md-0 m-auto  py-3" style="max-width: 350px;">Find Best Place For Living</h2>
+                        <p  class="">Find Best Place For Leaving</p>
                     </div>
                     
                     <div class="col-auto ">
